cmake: make it possible to find KF5PeopleVCard as a runtime dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,14 @@ find_package(KF5Contacts REQUIRED)
 
 add_subdirectory(src)
 add_subdirectory(autotests)
+
+set(CMAKECONFIG_INSTALL_DIR "${CMAKECONFIG_INSTALL_PREFIX}/KF5PeopleVCard")
+configure_package_config_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/KF5PeopleVCardConfig.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/KF5PeopleVCardConfig.cmake"
+  INSTALL_DESTINATION ${CMAKECONFIG_INSTALL_DIR}
+)
+
+install(FILES  "${CMAKE_CURRENT_BINARY_DIR}/KF5PeopleVCardConfig.cmake"
+        DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
+        COMPONENT Devel )
