--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ find_package(ECM 1.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
 include(ECMSetupVersion)
-include(ECMAddTests)
 
 include(CMakePackageConfigHelpers)
 include(FeatureSummary)
@@ -14,7 +13,9 @@ include(CheckFunctionExists)
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
-include(KDECompilerSettings)
+include(KDECompilerSettings NO_POLICY_SCOPE)
+
+include(ECMAddTests)
 
 find_package(Qt5 "5.2" REQUIRED COMPONENTS Widgets)
 find_package(KF5 "5.8" REQUIRED COMPONENTS CoreAddons People)
