--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,9 @@ include(KDECompilerSettings NO_POLICY_SCOPE)
 
 include(ECMAddTests)
 
-find_package(Qt5 "5.2" REQUIRED COMPONENTS Widgets)
-find_package(KF5 "5.8" REQUIRED COMPONENTS CoreAddons People I18n)
+find_package(Qt5  "5.2" REQUIRED COMPONENTS Widgets)
+find_package(KF5  "5.8" REQUIRED COMPONENTS CoreAddons I18n)
+find_package(KF5 "5.62" REQUIRED COMPONENTS People)
 
 find_package(KF5Contacts REQUIRED)
 
