--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # SPDX-FileCopyrightText: None
 # SPDX-License-Identifier: CC0-1.0
 
-.clang-format
+/.clang-format
+/compile_commands.json
+.clangd
+.cache
+.idea
+/cmake-build*
