--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,6 @@ include:
       - /gitlab-templates/freebsd-qt6.yml
       - /gitlab-templates/windows.yml
       - /gitlab-templates/windows-qt6.yml
+      - /gitlab-templates/craft-windows-x86-64-qt6.yml
       - /gitlab-templates/android.yml
       - /gitlab-templates/android-qt6.yml
