--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -17,3 +17,6 @@ Dependencies:
     'frameworks/kcoreaddons': '@latest-kf6'
     'frameworks/kpeople': '@latest-kf6'
     'frameworks/kcontacts': '@latest-kf6'
+
+Options:
+  require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
